# DGCV

./: .gitignore  LICENCE  MANIFEST.in  NOTICE  README.md  pyproject.toml  requirements_before.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml  update-dgcv-version.yml
src/DGCV/: CRGeometry.py  DGCVCore.py  DGCVFormatter.py  DGCore.py  RiemannianGeometry.py  _DGCV_display.py  __init__.py  _safeguards.py  complexGeometry.py  complexStructures.py  coordinateMaps.py  eds.py  finiteDimAlgebras.py  polynomials.py  solvers.py  tensors.py  vectorFieldsAndDifferentialForms.py
src/DGCV.egg-info/: PKG-INFO  SOURCES.txt
src/DGCV/eds/: eds.py
src/dgcv/: CR_geometry.py  Riemannian_geometry.py  __init__.py  _config.py  _dgcv_display.py  _safeguards.py  _settings.py  _tables.py  arrays.py  base.py  combinatorics.py  complex_structures.py  conversions.py  coordinateMaps.py  coordinate_maps.py  dgcv_core.py  dgcv_formatter.py  filtered_structures.py  light_wrappers.py  morphisms.py  polynomials.py  secondary_library.py  solvers.py  styles.py  tensors.py  vector_fields_and_differential_forms.py  vmf.py
src/dgcv/_aux/_backends/: __init__.py  _caches.py  _calculus.py  _cls_coercion.py  _display.py  _display_engine.py  _engine.py  _notebooks.py  _numeric_engine.py  _numeric_router.py  _polynomials.py  _symbolic_router.py  _types_and_constants.py  _updates.py
src/dgcv/_aux/_deprecated/: dgcv_formatter.py
src/dgcv/_aux/_utilities/: _config.py  _misc.py  _settings.py  _styles.py  (+1 more)
src/dgcv/algebras/: __init__.py  algebra_tools.py  algebras_aux.py  algebras_core.py  algebras_secondary.py
src/dgcv/ancillary/: __init__.py  light_wrappers.py
src/dgcv/backends/: __init__.py  _caches.py  _calculus.py  _cls_coercion.py  _display.py  _display_engine.py  _engine.py  _exact_arith.py  _notebooks.py  _numeric_engine.py  _numeric_router.py  _polynomials.py  _symbolic_router.py  _types_and_constants.py  _updates.py
src/dgcv/branching_analysis/: __init__.py  branching_analysis.py
src/dgcv/core/: __init__.py  base.py
src/dgcv/eds/: __init__.py  abst_vector_fields.py  ast.py  eds.py  eds_operations.py  eds_representations.py
src/dgcv/matrix_ring/: __init__.py  matrix_ring.py
src/dgcv/printing/: __init__.py  _class_printers.py  _data_structures.py  _string_processing.py
src/dgcv/special_fields/: CR_geometry.py  Riemannian_geometry.py  __init__.py  complex_structures.py  filtered_structures.py
src/dgcv_temp/: finiteDimAlgebras.py
tests/: conftest.py  test_imports.py
tests/.ipynb_checkpoints/: DGCV_introduction-checkpoint.ipynb
tests/_aux/_vmf/: test_vmf.py
tests/algebras/: test_algebras_aux.py  test_algebras_core.py  test_algebras_secondary.py
tests/core/: test_arrays.py  test_base.py  test_combinatorics.py  test_conversions.py  test_dgcv_core.py  test_polynomials.py  test_tensor_fields.py  test_vector_fields_and_differential_forms.py
tests/notebooks/: preKahler_eds.ipynb  prolongation_examples.ipynb
tests/printing/printing/: test__class_printers.py
tests/special_fields/: test_CR_geometry.py  test_complex_structures.py  test_filtered_structures.py
tutorials/: DGCV_in_action.ipynb  DGCV_introduction.html  DGCV_introduction.ipynb  DGCV_introduction_light.html  README.md  dgcv_introduction.ipynb  iframe-content-dark.html  iframe-content-light.html
tutorials/.ipynb_checkpoints/: DGCV_introduction-checkpoint.ipynb
tutorials/For older versions (<0.2.6)/: DGCV_in_action.ipynb
(+29 files in other folders)
