[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.6"
name = "DGCV"
version = "0.2.4"
description = "Differential Geometry with Complex Variables"
authors = [{ name = "David Sykes", email = "david@realandimaginary.com" }]
license = { text = "MIT" }
dependencies = ["sympy>=1.9", "pandas>=1.0", "ipython>=7.0"]
readme = "README.md"

[tool.ruff]
line-length = 88 # Match Black's default line length
select = [
  "F",
  "E",
  "W",
  "I",
  "BLK",
] # Include Black-compatible formatting and common linting rules
extend-select = [
  "Q",
] # Optional: Enable additional rules, like double-quote normalization
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
fix = true # Ensure Ruff automatically applies fixes
