[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "dgcv"
version = "0.3.13"
description = "Differential Geometry with Complex Variables"
authors = [{ name = "David Sykes", email = "david@realandimaginary.com" }]
license = "MIT"
license-files = ["LICENSE.txt"]
dependencies = []
readme = "README.md"

[project.optional-dependencies]
sympy = ["sympy>=1.9"]
ipython = ["ipython>=7.0"]
recommended = ["sympy>=1.9", "ipython>=7.0"]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dgcv = ["assets/fonts/*.ttf", "assets/fonts/fonts.css"]

[tool.ruff]
line-length = 88
extend-exclude = ["_build", "buck-out", "build", "dist", "tutorials", "*.ipynb"]

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
ignore = ["E501", "Q", "W291"] # global ignores

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.black]
line-length = 88
skip-string-normalization = false
target-version = ["py39", "py310", "py311", "py312", "py313"]
