[metadata]
name = DGCV
version = 0.0
description = A package for Differential Geometry with Complex Variables
author = David Sykes
author_email = sykes@ibs.re.kr

[options]
package_dir =
    = src  
packages = find:
include_package_data = True
python_requires = >=3.6

[options.package_data]
DGCV = assets/fonts/*.ttf, assets/fonts/fonts.css