[metadata]
name = dgcv
version = 0.4.1
description = A package for Differential Geometry with Complex Variables
author = David Sykes
author_email = david@realandimaginary.com

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.9

[options.package_data]
dgcv = assets/fonts/*.ttf, assets/fonts/fonts.css